Fix left/right/center aligned images. Add a shortcode to create 2/3-column image displays. Add a new image size, "1/2 page", and show it in image selection dropdowns. Update TinyMCE block format definitions to work with WordPress 3.9. Add some initial responsive design; left/right-aligned images get smaller on smaller resolutions. Make editor styles consistent with frontend styles.

--- a/xubuntu-fourteen/editor.css
+++ b/xubuntu-fourteen/editor.css
@@ -8,6 +8,14 @@ body {
 	color: #3c3c3c;
 }
 
+.group:after {
+	content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden;
+}
+
 /*  Elements
  *
  */
@@ -53,4 +61,25 @@ h6 { font-size: 105%; color: #aaa; }
 hr {
 	margin: 1em 0;
 	border-bottom: 1px solid #dadada;
+}
+
+div.mceTemp dl.wp-caption { /* editor-specific */
+	border: none !important;
+	background-color: transparent;
+	padding: 0;
+}
+
+div.mceTemp dl.wp-caption dd.wp-caption-dd { /* editor-specific, usually: .wp-caption-text */
+	margin: -4em 5px 1em 5px; /* note: different values */
+	padding-top: 4em !important;
+
+	background-color: #787878;
+	background-color: rgba( 0, 0, 0, 0.5 );
+	color: #fafafa;
+	color: rgba( 255, 255, 255, 0.8 );
+
+	border-radius: 14px;
+	padding: 0.5em 0.8em;
+
+	text-align: left;
 }
