--- a/xubuntu-fourteen/reset.css
+++ b/xubuntu-fourteen/reset.css
@@ -65,4 +65,3 @@ table {
 
 .hidden { display: none; }
 .small { font-size: 85%; }
-.aligncenter { text-align: center; }
